tests/templates/onpremises/05-headlamp-sso/baseline/manifests/auth/patches/pomerium-ingress.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    

  name: pomerium
  namespace: pomerium
spec:
  # Needs to be externally available if the user wants to protect other applications in the cluster
  ingressClassName: external
  rules:
    - host: pomerium.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium
                port:
                  number: 80
  tls:
    - hosts:
      - pomerium.example.com
